--- a/MobileMessagingPlugin/plugin.xml
+++ b/MobileMessagingPlugin/plugin.xml
@@ -20,4 +20,68 @@
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
 
 	</platform>
+
+	<platform name="android">
+		<config-file target="config.xml" parent="/*">
+	        <feature name="MobileMessagingCordova">
+	            <param name="android-package" value="org.apache.cordova.plugin.MobileMessagingCordova"/>
+	        </feature>
+	    </config-file>
+	    <config-file target="AndroidManifest.xml" parent="/*">
+	    	<!-- Mobile Messaging permissions -->
+		    <uses-permission android:name="android.permission.INTERNET" />
+		    <uses-permission android:name="android.permission.WAKE_LOCK" />
+		    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+		    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+		    <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
+		    <permission android:name="${applicationId}.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+
+		    <!-- Needed for push notifications that contain VIBRATE flag. Optional, but recommended. -->
+		    <uses-permission android:name="android.permission.VIBRATE" />
+		    <!-- /Mobile Messaging permissions -->
+
+		</config-file>
+		<config-file target="AndroidManifest.xml" parent="/manifest/application">
+		        <receiver
+		                android:name="org.infobip.mobile.messaging.gcm.MobileMessagingGcmReceiver"
+		                android:exported="true"
+		                android:permission="com.google.android.c2dm.permission.SEND" >
+		            <intent-filter>
+		                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+		            </intent-filter>
+		        </receiver>
+
+		        <service
+		                android:name="org.infobip.mobile.messaging.gcm.MobileMessagingGcmIntentService"
+		                android:exported="true">
+		        </service>
+
+		        <service
+		                android:name="org.infobip.mobile.messaging.gcm.MobileMessagingInstanceIDListenerService"
+		                android:exported="false">
+		                <intent-filter>
+		                    <action android:name="com.google.android.gms.iid.InstanceID"/>
+		                    <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
+		                </intent-filter>
+		        </service>
+
+		        <!--Service that triggers when geofence area is entered-->
+		        <service android:name="org.infobip.mobile.messaging.geo.GeofenceTransitionsIntentService" />
+
+		        <receiver android:name="org.infobip.mobile.messaging.BootReceiver">
+		                <intent-filter>
+		                    <action android:name="android.intent.action.BOOT_COMPLETED"/>
+		                </intent-filter>
+		        </receiver>
+
+		        <receiver android:name="org.infobip.mobile.messaging.GeofencingAlarmReceiver"/>
+		</config-file>
+		<framework src="com.google.android.gms:play-services-gcm:8.4.0" />
+		<framework src="com.google.android.gms:play-services-location:8.4.0" />
+		<framework src="com.google.code.gson:gson:2.6.2" />
+		<framework src="src/android/mobile-messaging-aar.gradle" custom="true" type="gradleReference" />
+
+    	<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
+	</platform>
+
 </plugin>
