--- a/MobileMessagingPlugin/plugin.xml
+++ b/MobileMessagingPlugin/plugin.xml
@@ -16,7 +16,7 @@
 		</config-file>
 
 		<pods-config ios-min-version="8.0" uses-frameworks="true"/>
-		<pod id="MobileMessaging" git = "https://github.com/infobip/mobile-messaging-sdk-ios.git" commit = "369a68758e03adfc7283a8069a82efa398bae230"/>
+		<pod id="MobileMessaging" version="2.0.2"/>
 		<pod id="CocoaLumberjack"/>
 		<pod id="SwiftyJSON"/>
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
