--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com-infobip-plugins-mobilemessaging" version="0.1.3" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	id="com-infobip-plugins-mobilemessaging"
+	version="0.1.4">
+
     <name>MobileMessagingCordova</name>
 
 	<dependency id="cordova-plugin-cocoapod-support"/>
