Changed license type in package.json

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "ios"
   ],
   "author": "Infobip Mobile Messaging Team",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/infobip/mobile-messaging-cordova-plugin/issues"
   },
