--- a/plugin.xml
+++ b/plugin.xml
@@ -18,10 +18,8 @@
 			<feature name="MobileMessagingCordova">
 				<param name="ios-package" value="MobileMessagingCordova" />
 			</feature>
-		</config-file>
-		<hook type="after_prepare" src="scripts/fixEntitlementsBuildSetting.js" />
-		<hook type="after_platform_add" src="scripts/fixEntitlementsBuildSetting.js"/>
-		<hook type="after_plugin_add" src="scripts/fixEntitlementsBuildSetting.js"/>
+		</config-file>		
+		<hook type="before_compile" src="scripts/fixEntitlementsBuildSetting.js"/>
 		<pods-config ios-min-version="8.4" uses-frameworks="true"/>
 		<pod id="MobileMessaging" version="2.3.1"/>
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
