--- a/plugin.xml
+++ b/plugin.xml
@@ -1,11 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" id="com-infobip-plugins-mobilemessaging" version="0.1.6">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	id="com-infobip-plugins-mobilemessaging"
+	version="0.1.6">
 	
 	<name>MobileMessagingCordova</name>
 	
 	<dependency id="cordova-plugin-cocoapod-support"/>
 	<dependency id="cordova-plugin-add-swift-support"/>
-	<!-- <dependency id="cordova-custom-config"/> -->
 	
 	<js-module name="mobileMessaging" src="www/MobileMessagingCordova.js">
 		<clobbers target="mobileMessaging" />
@@ -13,13 +15,10 @@
 	
 	<platform name="ios">
 		<config-file target="config.xml" parent="/*">
-			<!-- cordova-plugin-cocoapod-support -->
+			<!-- cordova-plugin-cocoapod-support > -->
 	        <preference name="deployment-target" value="8.4" />
 			<preference name="pods_use_frameworks" value="true" />
-
-			<!-- cordova-custom-config -->
-			<!-- <preference name="ios-XCBuildConfiguration-CODE_SIGN_ENTITLEMENTS" value="$(PROJECT_DIR)/$(PROJECT_NAME)/Entitlements-$(CONFIGURATION).plist" /> -->
-
+			<!-- < cordova-plugin-cocoapod-support -->
 			<feature name="MobileMessagingCordova">
 				<param name="ios-package" value="MobileMessagingCordova" />
 			</feature>
