--- a/plugin.xml
+++ b/plugin.xml
@@ -36,7 +36,8 @@
 		<hook type="before_compile" src="scripts/fixEntitlementsBuildSetting.js"/>
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
 
-		<pod name="MobileMessaging" version="2.5.2"/>
+		<pod name="MobileMessaging" version="2.5.5" />
+		<pod name="MobileMessaging/Geofencing" version="2.5.5" />
 	</platform>
 	
 	<platform name="android">
