--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,8 @@
 		<clobbers target="mobileMessaging" />
 	</js-module>
 	
+	<hook type="after_plugin_add" src="scripts/installDependencies.js"/>
+
 	<platform name="ios">
 		<config-file target="config.xml" parent="/*">
 			<feature name="MobileMessagingCordova">
@@ -35,6 +37,7 @@
 	        </config-file>
 		</config-file>
 		<hook type="before_compile" src="scripts/fixEntitlementsBuildSetting.js"/>
+	
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
 
 		<pod name="MobileMessaging" version="2.6.5" />
