--- a/example/package.json
+++ b/example/package.json
@@ -18,8 +18,7 @@
         "cordova-plugin-add-swift-support": "^1.7.0",
         "cordova-plugin-cocoapod-support": "^1.3.0",
         "cordova-plugin-inappbrowser": "^1.7.1",
-        "cordova-plugin-whitelist": "^1.3.2",
-        "infobip-mobile-messaging-cordova-plugin": "file:../"
+        "cordova-plugin-whitelist": "^1.3.2"
     },
     "cordova": {
         "plugins": {
