--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/infobip/mobile-messaging-cordova-plugin.git"
+    "url": "https://github.com/infobip/mobile-messaging-cordova-plugin.git"
   },
   "keywords": [
     "infobip",
