--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/infobip/mobile-messaging-cordova-plugin.git"
+    "url": "git+https://github.com/infobip/mobile-messaging-cordova-plugin.git"
   },
   "keywords": [
     "infobip",
@@ -37,5 +37,12 @@
     "karma-junit-reporter": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "watchify": "^3.9.0"
+  },
+  "cordova": {
+    "id": "com-infobip-plugins-mobilemessaging",
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
