--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -4,7 +4,7 @@ def overrideGmsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GMS_VER_OVER
 if (overrideAndroidSupportLibsVersion == "false") overrideAndroidSupportLibsVersion = ""
 if (overrideGmsVersion == "false") overrideGmsVersion = ""
 
-if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion > "28") {
+if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion > "26") {
     repositories {
         maven {
             url 'https://maven.google.com/'
@@ -18,8 +18,10 @@ dependencies {
     compile "org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-geo-sdk:$mmVersion@aar"
     compile("org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-sdk:$mmVersion@aar") {
         transitive = true;
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
+        if (!overrideAndroidSupportLibsVersion.empty) {
+            exclude group: 'com.android.support', module: 'support-v4'
+            exclude group: 'com.android.support', module: 'appcompat-v7'
+        }
         if (!overrideGmsVersion.empty) {
             exclude group: 'com.google.android.gms', module: 'play-services-gcm'
             exclude group: 'com.google.android.gms', module: 'play-services-location'
@@ -28,9 +30,6 @@ dependencies {
     if (!overrideAndroidSupportLibsVersion.empty) {
         compile "com.android.support:support-v4:$overrideAndroidSupportLibsVersion"
         compile "com.android.support:appcompat-v7:$overrideAndroidSupportLibsVersion"
-    } else {
-        compile "com.android.support:support-v4:27.1.1"
-        compile "com.android.support:appcompat-v7:27.1.1"
     }
     if (!overrideGmsVersion.empty) {
         compile "com.google.android.gms:play-services-gcm:$overrideGmsVersion"
