--- a/plugin.xml
+++ b/plugin.xml
@@ -67,6 +67,10 @@
 	            </intent-filter>
 	        </receiver>
 		</config-file>
+
+		<config-file parent="/*" target="res/values/strings.xml">
+            <string name="google_app_id">$ANDROID_FIREBASE_SENDER_ID</string>
+        </config-file>
 		
 		<framework src="libs/android/mobile-messaging-aar.gradle" custom="true" type="gradleReference" />
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
