--- a/plugin.xml
+++ b/plugin.xml
@@ -23,6 +23,7 @@
 
 	<preference name="ANDROID_SUPPORT_VER_OVERRIDE" default="false" />
 	<preference name="ANDROID_GMS_VER_OVERRIDE" default="false" />
+	<preference name="ANDROID_FIREBASE_VER_OVERRIDE" default="false" />
 
 	<platform name="ios">
 		<hook type="before_plugin_install" src="scripts/build_mobile_messaging_framework.sh"/>
@@ -58,6 +59,7 @@
 			</feature>
 			<preference name="IB_ANDROID_SUPPORT_VER_OVERRIDE" value="$ANDROID_SUPPORT_VER_OVERRIDE"/>
 			<preference name="IB_ANDROID_GMS_VER_OVERRIDE" value="$ANDROID_GMS_VER_OVERRIDE"/>
+			<preference name="IB_ANDROID_FIREBASE_VER_OVERRIDE" value="$ANDROID_FIREBASE_VER_OVERRIDE"/>
 		</config-file>
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
