Add HMS build config

--- a/plugin.xml
+++ b/plugin.xml
@@ -17,6 +17,7 @@
 		<clobbers target="mobileMessaging" />
 	</js-module>
 	
+	<hook type="before_build" src="scripts/hms_fix_dependencies.js"/>
 	<hook type="after_plugin_add" src="scripts/installDependencies.js"/>
 	<hook type="after_prepare" src="scripts/android_fix_google_app_id.js"/>
 	<hook type="after_prepare" src="scripts/integrate_notification_extension.js"/>
@@ -60,6 +61,7 @@
 			<preference name="IB_ANDROID_SUPPORT_VER_OVERRIDE" value="$ANDROID_SUPPORT_VER_OVERRIDE"/>
 			<preference name="IB_ANDROID_GMS_VER_OVERRIDE" value="$ANDROID_GMS_VER_OVERRIDE"/>
 			<preference name="IB_ANDROID_FIREBASE_VER_OVERRIDE" value="$ANDROID_FIREBASE_VER_OVERRIDE"/>
+			<preference name="IB_ENABLE_HMS_SUPPORT" value="$ENABLE_HMS_SUPPORT"/>
 		</config-file>
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
