--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -1,6 +1,7 @@
 def overrideAndroidSupportLibsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_SUPPORT_VER_OVERRIDE", "false")
 def overrideGmsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GMS_VER_OVERRIDE", "false")
 def overrideFirebaseVersion = cdvHelpers.getConfigPreference("IB_ANDROID_FIREBASE_VER_OVERRIDE", "false")
+def enableHmsSupport = cdvHelpers.getConfigPreference("IB_ENABLE_HMS_SUPPORT", "false")
 
 if (overrideAndroidSupportLibsVersion == "false") overrideAndroidSupportLibsVersion = ""
 if (overrideGmsVersion == "false") overrideGmsVersion = ""
@@ -13,36 +14,63 @@ if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url 'http://developer.huawei.com/repo/' }
     }
 }
 
 buildscript {
     repositories {
         maven { url "https://maven.google.com" }
+        maven { url 'http://developer.huawei.com/repo/' }
         jcenter()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.huawei.agconnect:agcp:1.2.1.301'
     }
 }
 
+// apply plugin: 'com.huawei.agconnect'
+
 dependencies {
-    def mmVersion = '2.4.2'
-    implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-geo-sdk:$mmVersion@aar"
-    implementation("org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-sdk:$mmVersion@aar") {
-        transitive = true;
-        if (!overrideAndroidSupportLibsVersion.empty) {
-            exclude group: 'com.android.support', module: 'support-v4'
-            exclude group: 'com.android.support', module: 'appcompat-v7'
-        }
-        if (!overrideGmsVersion.empty) {
-            exclude group: 'com.google.android.gms', module: 'play-services-location'
-        }
-        if (!overrideFirebaseVersion.empty) {
-            exclude group: 'com.google.firebase', module: 'firebase-messaging'
+    def mmHmsVersion = '1.0.0'
+    def mmFcmVersion = '3.1.0'
+    // to enable run: cordova build android --hms
+    def isHmsBuild = false
+
+    // Android dependencies start
+    if (!isHmsBuild) {
+        implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-geo-sdk:$mmFcmVersion@aar"
+        implementation("org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-sdk:$mmFcmVersion@aar") {
+            transitive = true;
+            if (!overrideAndroidSupportLibsVersion.empty) {
+                exclude group: 'com.android.support', module: 'support-v4'
+                exclude group: 'com.android.support', module: 'appcompat-v7'
+            }
+            if (!overrideGmsVersion.empty) {
+                exclude group: 'com.google.android.gms', module: 'play-services-location'
+            }
+            if (!overrideFirebaseVersion.empty) {
+                exclude group: 'com.google.firebase', module: 'firebase-messaging'
+            }
         }
     }
+    // Android dependencies end
+
+    // Hms dependencies start
+    if (!enableHmsSupport.empty && isHmsBuild) {
+        implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-huawei-geo-sdk:$mmHmsVersion@aar"
+        implementation("org.infobip.mobile.messaging.api:infobip-mobile-messaging-huawei-sdk:$mmHmsVersion@aar") {
+            transitive = true;
+            if (!overrideAndroidSupportLibsVersion.empty) {
+                exclude group: 'com.android.support', module: 'support-v4'
+                exclude group: 'com.android.support', module: 'appcompat-v7'
+            }
+        }
+    }
+    // Hms dependencies end
+
     if (!overrideAndroidSupportLibsVersion.empty) {
         implementation "com.android.support:support-v4:$overrideAndroidSupportLibsVersion"
         implementation "com.android.support:appcompat-v7:$overrideAndroidSupportLibsVersion"
