Pull request #54: Klatypov MM-4044 hms support
Merge in MML/infobip-mobile-messaging-cordova-plugin from klatypov-MM-4044-hms_support to master

Squashed commit of the following:

commit 98a18ee696c5537c3fa9e278e3692875f53bb17f
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Tue Jul 28 12:55:55 2020 +0300

    Remove redundant line

commit e2ca4d42408aaf7621db0fbb15c9210f9419e360
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Mon Jul 27 19:33:42 2020 +0300

    Docs updated

commit 36a8912d85f0caceeb43a8937ec7f1d58c147f2e
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Mon Jul 27 18:39:05 2020 +0300

    Remove commandline param

commit 172e119ba51c92128a09b007f798c6abf15b231c
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Mon Jul 27 16:49:09 2020 +0300

    Add ApiAvailability check

commit 06c1364c3048f1a21bb22cc5751f981cc2478934
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Tue Jul 21 18:21:44 2020 +0300

    Add HMS build config

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -13,12 +13,14 @@ if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url 'http://developer.huawei.com/repo/' }
     }
 }
 
 buildscript {
     repositories {
         maven { url "https://maven.google.com" }
+        maven { url 'http://developer.huawei.com/repo/' }
         jcenter()
     }
     dependencies {
@@ -27,22 +29,46 @@ buildscript {
     }
 }
 
+// apply plugin: 'com.huawei.agconnect'
+
 dependencies {
-    def mmVersion = '2.4.2'
-    implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-geo-sdk:$mmVersion@aar"
-    implementation("org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-sdk:$mmVersion@aar") {
-        transitive = true;
-        if (!overrideAndroidSupportLibsVersion.empty) {
-            exclude group: 'com.android.support', module: 'support-v4'
-            exclude group: 'com.android.support', module: 'appcompat-v7'
-        }
-        if (!overrideGmsVersion.empty) {
-            exclude group: 'com.google.android.gms', module: 'play-services-location'
-        }
-        if (!overrideFirebaseVersion.empty) {
-            exclude group: 'com.google.firebase', module: 'firebase-messaging'
+    def mmHmsVersion = '1.0.1'
+    def mmFcmVersion = '3.1.1'
+    // to enable run: cordova build android --hms
+    def isHmsBuild = false
+
+    // Android dependencies start
+    if (!isHmsBuild) {
+        implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-geo-sdk:$mmFcmVersion@aar"
+        implementation("org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-sdk:$mmFcmVersion@aar") {
+            transitive = true;
+            if (!overrideAndroidSupportLibsVersion.empty) {
+                exclude group: 'com.android.support', module: 'support-v4'
+                exclude group: 'com.android.support', module: 'appcompat-v7'
+            }
+            if (!overrideGmsVersion.empty) {
+                exclude group: 'com.google.android.gms', module: 'play-services-location'
+            }
+            if (!overrideFirebaseVersion.empty) {
+                exclude group: 'com.google.firebase', module: 'firebase-messaging'
+            }
         }
     }
+    // Android dependencies end
+
+    // Hms dependencies start
+    if (isHmsBuild) {
+        implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-huawei-geo-sdk:$mmHmsVersion@aar"
+        implementation("org.infobip.mobile.messaging.api:infobip-mobile-messaging-huawei-sdk:$mmHmsVersion@aar") {
+            transitive = true;
+            if (!overrideAndroidSupportLibsVersion.empty) {
+                exclude group: 'com.android.support', module: 'support-v4'
+                exclude group: 'com.android.support', module: 'appcompat-v7'
+            }
+        }
+    }
+    // Hms dependencies end
+
     if (!overrideAndroidSupportLibsVersion.empty) {
         implementation "com.android.support:support-v4:$overrideAndroidSupportLibsVersion"
         implementation "com.android.support:appcompat-v7:$overrideAndroidSupportLibsVersion"
