Pull request #55: Okoroleva MM-3944 InAppChat
Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-3944_InAppChat to master

Squashed commit of the following:

commit 391ff83474edef541ab6bb4f5f7f36fd6fc9f3ac
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Wed Aug 26 17:18:14 2020 +0300

    Remove default JS param

commit 1048deb62e67269fc262bf719cc45cad7ac2c11c
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Tue Aug 25 20:14:34 2020 +0300

    Fix JSON convertations

commit e1c4675afeae3f3f0631e584f642bf95832c2bc5
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Tue Aug 25 16:48:40 2020 +0300

    Add empty fields check

commit 7f8e6e154a64c0cb7d32a899541897f80b182c24
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Tue Aug 25 16:31:50 2020 +0300

    Build experiment

commit 4862593124009238970dfe54676c65178ab3742b
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Aug 24 19:05:15 2020 +0300

    showChat with presentingOptions

commit 32afec8c474f92a6c5e2c736e9e2740cfc4e5b5b
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Aug 24 18:29:55 2020 +0300

    version changed

commit b0272dc2899c8d45f918a1ba63599366533003ab
Merge: e96cd78e 08056f9d
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Aug 24 17:59:15 2020 +0300

    Merge branch 'okoroleva-MM-3944_InAppChat' of ssh://git.ib-ci.com:7999/mml/infobip-mobile-messaging-cordova-plugin into okoroleva-MM-3944_InAppChat

commit e96cd78ec0d99463fa83185bc36bd7d39a16f9a9
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Mon Aug 24 17:59:07 2020 +0300

    Example deployment target fix

commit 08056f9d381ff4774f76545c80df4628bf4a692e
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Mon Aug 24 17:07:24 2020 +0300

    Fix test

commit cf44ff08b50b28c286f7759a7dee4ff15c96db7e
Author: Konstantin Latypov <Konstantin.Latypov@infobip.com>
Date:   Mon Aug 24 16:59:19 20

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -33,7 +33,7 @@ buildscript {
 
 dependencies {
     def mmHmsVersion = '1.0.1'
-    def mmFcmVersion = '3.1.1'
+    def mmFcmVersion = '3.1.2'
     // Modified by scripts/hms_fix_dependencies.js . To enable run: cordova build android --hms
     def isHmsBuild = false
 
@@ -68,6 +68,8 @@ dependencies {
         }
     }
     // Hms dependencies end
+
+    implementation "org.infobip.mobile.messaging.api:infobip-mobile-messaging-android-chat-sdk:$mmFcmVersion@aar"
 
     if (!overrideAndroidSupportLibsVersion.empty) {
         implementation "com.android.support:support-v4:$overrideAndroidSupportLibsVersion"
