--- a/example/package.json
+++ b/example/package.json
@@ -7,29 +7,14 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "andrey.berezhnoy@infobip.com",
     "license": "Apache-2.0",
     "dependencies": {
-        "com-infobip-plugins-mobilemessaging": "..",
-        "cordova-android": "^6.2.3",
-        "cordova-browser": "^4.1.0",
-        "cordova-custom-config": "file:node_modules/cordova-custom-config",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-add-swift-support": "^1.7.0",
-        "cordova-plugin-cocoapod-support": "^1.3.0",
-        "cordova-plugin-inappbrowser": "^1.7.1",
-        "cordova-plugin-whitelist": "^1.3.2"
+        "com-infobip-plugins-mobilemessaging": "1.6.3",
+        "cordova-android": "^8.1.0",
+        "cordova-custom-config": "^5.1.0",
+        "cordova-ios": "^5.1.1",
+        "cordova-plugin-add-swift-support": "^2.0.2"
     },
     "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {},
-            "com-infobip-plugins-mobilemessaging": {},
-            "cordova-plugin-inappbrowser": {}
-        },
-        "platforms": [
-            "android",
-            "browser",
-            "ios"
-        ]
     }
 }
