--- a/example/package.json
+++ b/example/package.json
@@ -1,20 +1,17 @@
 {
-    "name": "cordovamobilepushdemo",
-    "displayName": "CordovaMobilePushDemo",
-    "version": "1.0.0",
-    "description": "A sample Cordova mobile push demo.",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "license": "Apache-2.0",
-    "dependencies": {
-        "com-infobip-plugins-mobilemessaging": "1.6.3",
-        "cordova-android": "^8.1.0",
-        "cordova-custom-config": "^5.1.0",
-        "cordova-ios": "^5.1.1",
-        "cordova-plugin-add-swift-support": "^2.0.2"
-    },
-    "cordova": {
-    }
+  "name": "cordovamobilepushdemo",
+  "displayName": "CordovaMobilePushDemo",
+  "version": "1.0.0",
+  "description": "A sample Cordova mobile push demo.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "Apache-2.0",
+  "dependencies": {},
+  "cordova": {
+    "plugins": {},
+    "platforms": []
+  },
+  "devDependencies": {}
 }
